--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 remote_theme: pmarsceill/just-the-docs
+logo: "https://bnetcmsus-a.akamaihd.net/cms/template_resource/D0IR2SQIBONO1541005862105.png"
