--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ logo: "https://bnetcmsus-a.akamaihd.net/cms/template_resource/D0IR2SQIBONO154100
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
 gh_edit_repository: "https://github.com/voces/wcd" # the github URL for your repo
-gh_edit_branch: "master" # the branch that your docs is served from
+gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
