--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pmarsceill/just-the-docs	# Footer "Edit this page on GitHub" link text
 logo: "https://bnetcmsus-a.akamaihd.net/cms/template_resource/D0IR2SQIBONO1541005862105.png"
+title: wcd
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
@@ -8,3 +9,5 @@ gh_edit_repository: "https://github.com/voces/wcd" # the github URL for your rep
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+collections:
+  - natives
