--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pmarsceill/just-the-docs	# Footer "Edit this page on GitHub" link text
-logo: "https://bnetcmsus-a.akamaihd.net/cms/template_resource/D0IR2SQIBONO1541005862105.png"
+logo: "assets/wcd.png"
 title: wcd
 
 # Footer "Edit this page on GitHub" link text
