--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pmarsceill/just-the-docs	# Footer "Edit this page on GitHub" link text
-logo: "assets/wcd.png"
+logo: "assets/logo.png"
 title: wcd
 
 # Footer "Edit this page on GitHub" link text
