--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "mime": "^2.4.6"
   }
 }
